--- a/package.json
+++ b/package.json
@@ -7,16 +7,14 @@
     "typings-install": "typings install",
     "postinstall": "npm run typings-install"
   },
-  "dependencies": {
+  "devDependencies": {
     "angular2": "2.0.0-beta.15",
     "rxjs": "5.0.0-beta.2",
     "bluebird": "3.3.4",
     "core-js": "2.2.2",
     "i18next": "2.5.1",
     "i18next-browser-languagedetector": "0.3.0",
-    "i18next-xhr-backend": "0.5.3"
-  },
-  "devDependencies": {
+    "i18next-xhr-backend": "0.5.3",
     "typescript": "1.8.7",
     "typings": "0.7.9"
   },
