--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "bluebird": "3.3.4",
     "core-js": "2.2.2",
     "typescript": "1.8.7",
-    "typings": "0.7.9"
+    "typings": "0.7.9",
+    "i18next-parser": "0.7.0",
+    "gulp": "3.9.0"
   },
   "repository": {
     "type": "git",
