--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
   "dependencies": {
     "i18next": "2.5.1",
     "i18next-browser-languagedetector": "0.3.0",
-    "i18next-xhr-backend": "0.5.3"
+    "i18next-xhr-backend": "0.5.3",
+    "bluebird": "3.3.4"
   },
   "devDependencies": {
-    "angular2": "2.0.0-beta.15",
-    "rxjs": "5.0.0-beta.2",
-    "bluebird": "3.3.4",
+    "angular2": "2.0.0-beta.17",
     "core-js": "2.2.2",
-    "typescript": "1.8.7",
-    "typings": "0.7.9",
+    "gulp": "3.9.0",
     "i18next-parser": "0.7.0",
-    "gulp": "3.9.0"
+    "rxjs": "5.0.0-beta.6",
+    "typescript": "~1.8.9",
+    "typings": "^0.8.1"
   },
   "repository": {
     "type": "git",
