--- a/package.json
+++ b/package.json
@@ -8,19 +8,22 @@
     "postinstall": "npm run typings-install"
   },
   "dependencies": {
+    "bluebird": "3.3.4",
     "i18next": "2.5.1",
     "i18next-browser-languagedetector": "0.3.0",
-    "i18next-xhr-backend": "0.5.3",
-    "bluebird": "3.3.4"
+    "i18next-xhr-backend": "0.5.3"
   },
   "devDependencies": {
     "angular2": "2.0.0-beta.17",
-    "core-js": "2.2.2",
+    "core-js": "^2.2.2",
+    "es6-shim": "^0.35.0",
+    "es7-reflect-metadata": "^1.6.0",
     "gulp": "3.9.0",
     "i18next-parser": "0.7.0",
     "rxjs": "5.0.0-beta.6",
     "typescript": "~1.8.9",
-    "typings": "^0.8.1"
+    "typings": "^0.8.1",
+    "zone.js": "~0.6.12"
   },
   "repository": {
     "type": "git",
