--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,9 @@
 	"moduleResolution": "node",
 	"emitDecoratorMetadata": true,
 	"experimentalDecorators": true,
-	"sourceMap": true
+	"sourceMap": true,
+	"outDir": "./dist",
+	"rootDir": "./src"
   },
   "exclude": [
 	"node_modules",
@@ -18,6 +20,5 @@
 	"typings/browser.d.ts"
   ],
   "compileOnSave": false,
-  "buildOnSave": false,
-  "atom": {"rewriteTsconfig": false}
+  "buildOnSave": false
 }
