--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,21 @@
 {
   "compilerOptions": {
-	"target": "es5",
-	"module": "commonjs",
-	"moduleResolution": "node",
-	"emitDecoratorMetadata": true,
-	"experimentalDecorators": true,
-	"sourceMap": true,
-	"outDir": "./dist",
-	"rootDir": "./src"
+    "target": "es5",
+    "module": "commonjs",
+    "moduleResolution": "node",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "sourceMap": true
   },
   "exclude": [
-	"node_modules",
-	"typings/main.d.ts",
-	"typings/main"
+    "node_modules",
+    "typings/main.d.ts",
+    "typings/main"
   ],
   "filesGlob": [
-	"./src/**/*.ts",
-	"!./node_modules/**/*.ts",
-	"typings/browser.d.ts"
+    "./src/**/*.ts",
+    "!./node_modules/**/*.ts",
+    "typings/browser.d.ts"
   ],
   "compileOnSave": false,
   "buildOnSave": false
