--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "i18next-xhr-backend": "0.5.3"
   },
   "devDependencies": {
-    "angular2": "2.0.0-beta.17",
-    "core-js": "^2.2.2",
+    "@angular/core": "2.0.0-rc.2",
+    "core-js": "^2.4.0",
     "es6-shim": "^0.35.0",
     "es7-reflect-metadata": "^1.6.0",
     "gulp": "3.9.0",
