--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
     "i18next-xhr-backend": "0.5.3"
   },
   "devDependencies": {
-    "@angular/core": "2.0.0-rc.2",
+    "@angular/core": "2.0.0-rc.4",
     "core-js": "^2.4.0",
-    "es6-shim": "^0.35.0",
-    "es7-reflect-metadata": "^1.6.0",
     "gulp": "3.9.0",
     "i18next-parser": "0.7.0",
     "rxjs": "5.0.0-beta.6",
-    "typescript": "~1.8.9",
-    "typings": "^0.8.1",
+    "typescript": "~1.8.10",
+    "typings": "~1.3.0",
     "zone.js": "~0.6.12"
   },
   "repository": {
