--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,14 +8,7 @@
     "sourceMap": true
   },
   "exclude": [
-    "node_modules",
-    "typings/main.d.ts",
-    "typings/main"
-  ],
-  "filesGlob": [
-    "./src/**/*.ts",
-    "!./node_modules/**/*.ts",
-    "typings/browser.d.ts"
+    "node_modules"
   ],
   "compileOnSave": false,
   "buildOnSave": false
