*clear "prepublish": "tsc"

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "clean": "npm cache clean",
     "typings-install": "typings install",
-    "postinstall": "npm run typings-install",
-    "prepublish": "tsc"
+    "postinstall": "npm run typings-install"
   },
   "dependencies": {
     "i18next": "2.5.1",
