--- a/package.json
+++ b/package.json
@@ -13,15 +13,25 @@
     "i18next-browser-languagedetector": "0.3.0",
     "i18next-xhr-backend": "0.5.3"
   },
-  "devDependencies": {
-    "@angular/core": "2.0.0-rc.4",
+  "peerDependencies": {
+    "@angular/core": "2.0.0-rc.5",
+
     "core-js": "^2.4.0",
-    "gulp": "3.9.0",
-    "i18next-parser": "0.7.0",
-    "rxjs": "5.0.0-beta.6",
+    "zone.js": "~0.6.17",
+    "rxjs": "5.0.0-beta.6"
+  },
+  "devDependencies": {
+    "@angular/core": "2.0.0-rc.5",
+
     "typescript": "~1.8.10",
     "typings": "~1.3.0",
-    "zone.js": "~0.6.12"
+
+    "core-js": "^2.4.0",
+    "zone.js": "~0.6.17",
+    "rxjs": "5.0.0-beta.6",
+
+    "gulp": "3.9.0",
+    "i18next-parser": "0.7.0"
   },
   "repository": {
     "type": "git",
