--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "clean": "npm cache clean",
     "typings-install": "typings install",
     "postinstall": "npm run typings-install",
-	"deploy": "npm install && tsc && npm publish ./"
+    "deploy": "npm install && tsc && npm publish ./"
   },
   "dependencies": {
     "i18next": "2.5.1",
@@ -14,14 +14,14 @@
     "i18next-xhr-backend": "0.5.3"
   },
   "peerDependencies": {
-    "@angular/core": "2.0.0-rc.5",
+    "@angular/core": "~2.0.0-rc.5",
 
     "core-js": "^2.4.0",
     "zone.js": "~0.6.17",
     "rxjs": "5.0.0-beta.6"
   },
   "devDependencies": {
-    "@angular/core": "2.0.0-rc.5",
+    "@angular/core": "~2.0.0-rc.5",
 
     "typescript": "~1.8.10",
     "typings": "~1.3.0",
