--- a/package.json
+++ b/package.json
@@ -17,17 +17,17 @@
     "@angular/core": "~2.0.0-rc.5",
 
     "core-js": "^2.4.0",
-    "zone.js": "~0.6.17",
+    "zone.js": "~0.6.13",
     "rxjs": "5.0.0-beta.6"
   },
   "devDependencies": {
-    "@angular/core": "~2.0.0-rc.5",
+    "@angular/core": "2.0.0-rc.5",
 
     "typescript": "~1.8.10",
     "typings": "~1.3.0",
 
     "core-js": "^2.4.0",
-    "zone.js": "~0.6.17",
+    "zone.js": "~0.6.13",
     "rxjs": "5.0.0-beta.6",
 
     "gulp": "3.9.0",
