--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "license": "MIT",
   "scripts": {
     "clean": "npm cache clean",
-    "typings-install": "typings install",
-    "postinstall": "npm run typings-install",
-    "deploy": "npm install && tsc && npm publish ./"
+    "typings-install": "node_modules/.bin/typings \"install\"",
+    "tsc-build": "node \"node_modules/typescript/bin/tsc\"",
+    "deploy": "npm install && npm run typings-install && npm run tsc-build && npm publish ./"
   },
   "dependencies": {
     "i18next": "2.5.1",
@@ -14,21 +14,21 @@
     "i18next-xhr-backend": "0.5.3"
   },
   "peerDependencies": {
-    "@angular/core": "~2.0.0-rc.5",
+    "@angular/core": "~2.0.0-rc.6",
 
     "core-js": "^2.4.0",
-    "zone.js": "~0.6.13",
-    "rxjs": "5.0.0-beta.6"
+    "rxjs": "~5.0.0-beta.11",
+    "zone.js": "~0.6.13"
   },
   "devDependencies": {
-    "@angular/core": "2.0.0-rc.5",
+    "@angular/core": "~2.0.0-rc.6",
 
-    "typescript": "~1.8.10",
-    "typings": "~1.3.0",
+    "typescript": "2.0.0",
+    "typings": "1.3.3",
 
     "core-js": "^2.4.0",
+    "rxjs": "5.0.0-beta.11",
     "zone.js": "~0.6.13",
-    "rxjs": "5.0.0-beta.6",
 
     "gulp": "3.9.0",
     "i18next-parser": "0.7.0"
