--- a/package.json
+++ b/package.json
@@ -14,20 +14,20 @@
     "i18next-xhr-backend": "0.5.3"
   },
   "peerDependencies": {
-    "@angular/core": "~2.0.0-rc.6",
+    "@angular/core": "~2.0.0",
 
     "core-js": "^2.4.0",
-    "rxjs": "~5.0.0-beta.11",
+    "rxjs": "~5.0.0-beta.12",
     "zone.js": "~0.6.13"
   },
   "devDependencies": {
-    "@angular/core": "~2.0.0-rc.6",
+    "@angular/core": "2.0.0",
 
-    "typescript": "2.0.0",
+    "typescript": "2.0.2",
     "typings": "1.3.3",
 
     "core-js": "^2.4.0",
-    "rxjs": "5.0.0-beta.11",
+    "rxjs": "~5.0.0-beta.12",
     "zone.js": "~0.6.13",
 
     "gulp": "3.9.0",
@@ -40,6 +40,9 @@
   "bugs": {
     "url": "https://github.com/apoterenko/angular2-i18next/issues"
   },
+  "module": "index.js",
+  "typings": "index.d.ts",
+  "main": "index.js",
   "engines": {
     "node": ">= 4.2.1",
     "npm": ">= 3"
