--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "i18next": "2.5.1",
-    "i18next-browser-languagedetector": "0.3.0",
     "i18next-xhr-backend": "0.5.3"
   },
   "peerDependencies": {
     "@angular/core": "~2.0.0",
+
+    "ts-smart-logger": "^0.0.2",
 
     "core-js": "^2.4.0",
     "rxjs": "~5.0.0-beta.12",
@@ -22,6 +23,8 @@
   },
   "devDependencies": {
     "@angular/core": "2.0.0",
+
+    "ts-smart-logger": "^0.0.2",
 
     "typescript": "2.0.2",
     "typings": "1.3.3",
