--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "license": "MIT",
   "scripts": {
     "clean": "npm cache clean",
-    "typings-install": "node_modules/.bin/typings \"install\"",
     "tsc-build": "node \"node_modules/typescript/bin/tsc\"",
-    "deploy": "npm install && npm run typings-install && npm run tsc-build && npm publish ./"
+    "deploy": "npm install && npm run tsc-build && npm publish ./"
   },
   "dependencies": {
     "i18next": "2.5.1",
@@ -15,7 +14,7 @@
   "peerDependencies": {
     "@angular/core": "~2.0.0",
 
-    "ts-smart-logger": "^0.0.2",
+    "ts-smart-logger": "~0.0.3",
 
     "core-js": "^2.4.0",
     "rxjs": "~5.0.0-beta.12",
@@ -24,10 +23,11 @@
   "devDependencies": {
     "@angular/core": "2.0.0",
 
-    "ts-smart-logger": "^0.0.2",
+    "ts-smart-logger": "~0.0.3",
 
     "typescript": "2.0.2",
-    "typings": "1.3.3",
+    "@types/core-js": "^0.9.28",
+    "@types/node": "^6.0.38",
 
     "core-js": "^2.4.0",
     "rxjs": "~5.0.0-beta.12",
