--- a/demo/package.json
+++ b/demo/package.json
@@ -134,11 +134,13 @@
     "@angular/platform-browser": "~2.2.0",
     "@angular/platform-browser-dynamic": "~2.2.0",
     "@angular/router": "~3.2.0",
-    "intl": "^1.2.5",
+    "angular2-i18next": "^1.0.1",
     "core-js": "^2.4.1",
+    "intl": "^1.2.5",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.0-beta.12",
     "systemjs": "0.19.40",
+    "ts-smart-logger": "0.0.4",
     "zone.js": "0.6.25"
   }
 }
